server-deployment/register-service/svc-server.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: chisel-register
  namespace: chisel-server
  annotations:
    traefik.ingress.kubernetes.io/service.serversscheme: http
    traefik.ingress.kubernetes.io/service.serverstransport: chisel-server-register-transport@kubernetescrd
spec:
  selector:
    app: chisel-register
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      name: chisel-register
  type: ClusterIP

---
